[package]
name = "stats_traits"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrlegohead0x45/stats-traits"
description = "Traits for collection-like types to calculate statistics"
keywords = ["statistics", "traits", "collections", "math", "maths"]
categories = ["mathematics", "no-std", "rust-patterns"]

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
approx = "0.5.1"
